@@ -7,6 +7,8 @@
 					http://gollem.swi.psy.uva.nl/bugzilla/
 					--------------------------------------
 
+  * ADDED: library(prolog_stack) to get and print stack-traces from Prolog.
+
 VERSION 5.3.11 (May 25, 2004)
 =============================
 
